--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,6 @@
     <meta name="format-detection" content="telephone=yes"/>
     <title>HTML Academy: Мишка | Учебный проект </title>
     <link rel="stylesheet" href="css/style_mini.css">
-    <link rel="preload" href="fonts/opensans.woff" as="font" crossorigin>
     <link rel="preload" href="fonts/opensans.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/opensansbold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="shortcut icon" href="favicon.ico">
@@ -71,8 +70,8 @@
                 <div class="product-card__buy">
                   <span class="product-card__price">1 200 руб.</span>
                   <a href="basket.html" class="product-card__basket btn-js"><span class="visually-hidden">Положить в корзину</span>
-                      <svg width="18" height="18">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-cart"/>
+                    <svg width="18" height="18">
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-cart"/>
                     </svg>
                   </a>
                 </div>
@@ -83,13 +82,13 @@
               <article class="product-card">
                 <a href="product-card.html" class="product-card__link">
                   <picture>
-                      <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
-                      <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
-                      <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x, img/photo-bowl-mobile@2x.webp 2x">
-                      <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
-                      <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
-                      <img src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" alt="Корзинка для белья" class="product-card__img">
-                    </picture>
+                    <source type="image/webp" media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x, img/photo-bowl-mobile@2x.webp 2x">
+                    <source media="(min-width: 1150px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
+                    <img src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" alt="Корзинка для белья" class="product-card__img">
+                  </picture>
                 </a>
                 <div class="product-card__spec">
                   <div class="product-card__text">
@@ -141,12 +140,12 @@
           <div class="production__video">
             <a href="#" class="production__play"><span class="visually-hidden">Проиграть видео</span></a>
             <picture>
-                <source type="image/webp" media="(min-width: 1150px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
-                <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x,img/video-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
-                <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Видео - производство" class="production__img">
+              <source type="image/webp" media="(min-width: 1150px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
+              <source media="(min-width: 1150px)" srcset="img/video-desktop@1x.jpg 1x,img/video-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+              <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Видео - производство" class="production__img">
             </picture>
           </div>
           <div class="production__text">
@@ -159,7 +158,8 @@
     <footer class="page-footer">
       <div class="page-footer__container">
         <a href="#" class="page-footer__logo">
-          <svg width="102" height="34" aria-label="Логотип - Магазин Мишка"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-footer"/>
+          <svg width="102" height="34" aria-label="Логотип - Магазин Мишка">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-footer"/>
           </svg>
         </a>
         <ul class="social-list">
